--- a/Periscole.Bdd/Periscole.Bdd.csproj
+++ b/Periscole.Bdd/Periscole.Bdd.csproj
@@ -8,6 +8,16 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
+    <Folder Include="FluentConfiguration\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
