--- a/Periscole.Bdd/Periscole.Bdd.csproj
+++ b/Periscole.Bdd/Periscole.Bdd.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
     <Folder Include="FluentConfiguration\" />
+    <Folder Include="Contrats\" />
   </ItemGroup>
 
   <ItemGroup>
