--- a/Periscole.Api/Periscole.Api.csproj
+++ b/Periscole.Api/Periscole.Api.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Periscole.Bdd\Periscole.Bdd.csproj" />
+  </ItemGroup>
+
 </Project>
