--- a/Periscole.Api/appsettings.json
+++ b/Periscole.Api/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;",
+        "PeriscoleDevConnexion": "Data source=LATITUDE7492; Initial Catalog=PeriscoleDB;Integrated Security=SSPI;"
+    },
   "AllowedHosts": "*"
 }
