--- a/Periscole.Front/Periscole.Front.csproj
+++ b/Periscole.Front/Periscole.Front.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Periscole.Bdd\Periscole.Bdd.csproj" />
+  </ItemGroup>
+
 </Project>
