--- a/Periscole.Front/appsettings.Development.json
+++ b/Periscole.Front/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;",
+        "PeriscoleDevConnexion": "Data source=LATITUDE7492; Initial Catalog=PeriscoleDB;Integrated Security=SSPI;"
     }
-  }
 }
