corrections configuration de base

--- a/Periscole.Front/appsettings.json
+++ b/Periscole.Front/appsettings.json
@@ -1,9 +1,25 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Serilog": {
+        "Using": [ "Serilog.Sinks.Console" ],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft.AspNetCore": "Warning"
+            }
+        },
+        "WriteTo": [
+            { "Name": "Console" }
+        ]
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;",
+        "PeriscoleConnexion": "Data source=LATITUDE7492; Initial Catalog=PeriscoleDB;Integrated Security=True;MultipleActiveResultSets=True;"
     }
-  },
-  "AllowedHosts": "*"
 }
