--- a/Periscole.Front/appsettings.Development.json
+++ b/Periscole.Front/appsettings.Development.json
@@ -7,6 +7,6 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;",
-        "PeriscoleDevConnexion": "Data source=LATITUDE7492; Initial Catalog=PeriscoleDB;Integrated Security=SSPI;"
+        "PeriscoleConnexion": "Data source=LATITUDE7492; Initial Catalog=PeriscoleDB;Integrated Security=True;MultipleActiveResultSets=True;"
     }
 }
