--- a/Periscole.Bdd/Periscole.Bdd.csproj
+++ b/Periscole.Bdd/Periscole.Bdd.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Domaine\EleveClasse.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="FluentConfiguration\" />
     <Folder Include="Contrats\" />
   </ItemGroup>
