--- a/Periscole.Api/appsettings.json
+++ b/Periscole.Api/appsettings.json
@@ -7,7 +7,7 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;",
-        "PeriscoleDevConnexion": "Data source=LATITUDE7492; Initial Catalog=PeriscoleDB;Integrated Security=SSPI;"
+        "PeriscoleDbConnexion": "Data source=LATITUDE7492; Initial Catalog=PeriscoleDB;Integrated Security=SSPI;"
     },
   "AllowedHosts": "*"
 }
