injection des dépendances ajout Serilog

--- a/Periscole.Api/appsettings.json
+++ b/Periscole.Api/appsettings.json
@@ -5,9 +5,20 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft.AspNetCore": "Warning"
+            }
+        },
+        "WriteTo": [
+            { "Name": "Console" }
+        ]
+    },
     "ConnectionStrings": {
         "DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;",
         "PeriscoleDbConnexion": "Data source=LATITUDE7492; Initial Catalog=PeriscoleDB;Integrated Security=SSPI;"
     },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*"
 }
