--- a/Periscole.Api/appsettings.json
+++ b/Periscole.Api/appsettings.json
@@ -18,7 +18,7 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;",
-        "PeriscoleDbConnexion": "Data source=LATITUDE7492; Initial Catalog=PeriscoleDB;Integrated Security=SSPI;"
+        "PeriscoleConnexion": "Data source=LATITUDE7492; Initial Catalog=PeriscoleDB;Integrated Security=SSPI;"
     },
     "AllowedHosts": "*"
 }
