--- a/Periscole.Front/appsettings.json
+++ b/Periscole.Front/appsettings.json
@@ -20,6 +20,6 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;",
-        "PeriscoleDbConnexion": "Data source=LATITUDE7492; Initial Catalog=PeriscoleDB;Integrated Security=True;MultipleActiveResultSets=True;"
+        "PeriscoleConnexion": "Data source=LATITUDE7492; Initial Catalog=PeriscoleDB;Integrated Security=True;MultipleActiveResultSets=True;"
     }
 }
